--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,21 @@
 annotated-types==0.7.0
 anyio==4.7.0
+certifi==2024.8.30
 click==8.1.7
 fastapi==0.115.6
 h11==0.14.0
 idna==3.10
+pinecone
+pinecone-client
+pinecone-plugin-inference
 pydantic==2.10.3
 pydantic_core==2.27.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
+tqdm==4.67.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.32.1
